fixed font awesome icons appearing the wrong color in dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
   --mint-green: #e6f7ef; 
   --greenify-button-green: #09ad5f; 
   --coffee-green: #006241;
+  --our-black: #171717;
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -21,7 +22,7 @@
   input[type="number"], textarea {
     color: black; 
   }
-  h1, h2, p, label, i { 
+  h1, h2, p, label { 
     color: var(--background);
   }
 }
@@ -133,6 +134,10 @@ Default Elements
   align-items: center;
   justify-content: center;
   background: linear-gradient(to bottom, var(--mint-green), #FFFFFF);
+}
+
+.fa-icon-dark {
+  color: var(--our-black);
 }
 /* End of Default Elements */
 
